# studentFather

./: .gitignore  AGENTS.md  New Microsoft Word Document.docx  backup.json  gen.ps1  generate-license.bat  generate-license.ps1  index.html  license.json  package-lock.json  package.json  start.bat  supabase-config.json  temp_check.sql  vite.config.ts
parent-portal/: .env.example  index.html  package-lock.json  package.json
scripts/: add_book_pay_table.cjs  add_center_logo.cjs  add_custom_roles_table.cjs  add_del_reason.cjs  add_delivery_cols.cjs  add_expenses_created_by.cjs  add_expenses_table.cjs  add_groups_monthly_fee.cjs  add_password.cjs  add_payments_archived.cjs  add_permissions_column.cjs  add_profile_tables.cjs  add_student_cols.cjs  add_super_admin_flag.cjs  add_teachers.cjs  add_user_phone_and_reset.cjs  check_api_pay.cjs  check_assign.cjs  check_col.cjs  check_db.cjs  check_dump.cjs  check_dump2.cjs  check_grades.cjs  check_groups.cjs  check_kareem.cjs  check_mismatch.cjs  check_pay2.cjs  check_subject_match.cjs  check_teacher.cjs  clean_test.cjs  clean_users.cjs  clear_subjects.cjs  clear_subjects_array.cjs  debug_pay.cjs  export-from-pg.cjs  fix_absence.cjs  fix_admin_name.cjs  fix_dup_admin.cjs  fix_grades.cjs  generate-icons.cjs  (+9 more)
server/: index.mjs  init-sql.js  init.sql  seed-questions.mjs
src/: App.tsx  auth.ts  index.css  supabaseClient.ts  types.ts  (+1 more)
src-tauri/: Cargo.toml  README.md  setup-build.ps1  start.sh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  db.rs  lib.rs  license.rs  main.rs  services.rs
(+72 files in other folders)
