[package]
name = "center-masr"
version = "1.0.0"
description = "CenterMasr ERP for Educational Centers"
authors = ["farsmbadr"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macros", "sqlx", "sqlite"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"