[package]
name = "centermasr"
version = "1.0.0"
edition = "2021"
description = "CenterMasr ERP - Desktop Application"
license = "MIT"
repository = "https://github.com/baderp/centermasr"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking"] }
sha2 = "0.10"
hex = "0.4"
